# mmm-parameter-quality-checks

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: MMM_dummy_outputs.csv  MMM_dummy_outputs.xlsx
notebooks/: =4.2.0  exploration.ipynb
src/mmm_quality_checks/: __init__.py  checks.py  constants.py  exceptions.py  pipeline.py  validation.py  visualizations.py
tests/: test_checks.py  test_pipeline.py  test_validation.py
